--- a/app/src/main/res/layout/fragment_lpg.xml
+++ b/app/src/main/res/layout/fragment_lpg.xml
@@ -108,7 +108,7 @@
                 android:text="City"/>
 
             <RadioButton
-                android:id="@+id/rb_out_city_mode"
+                android:id="@+id/rb_highway_mode"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
