--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,13 +7,13 @@
         android:title="@string/title_lpg" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_petrol"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_petrol" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_service"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_service" />
 
 </menu>
