--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_service"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_service" />
+        android:title="@string/title_all" />
 
 </menu>
